# CS_1D_BaseBall

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  application.cpp  application.h  auth_service.cpp  browse_window.cpp  data_types.h  main.cpp  main_window.cpp  main_window.h  main_window.ui  mapwindow.cpp  mapwindow.h  mapwindow.ui  tour_shop_window.cpp  tour_shop_window.ui  tripplanningpage.cpp  tripplanningpage.h  tripplanningpage.ui
.github/workflows/: PR-Build-Check-(Windows)yml  build-linux.yml  cmake-multi-platform.yml  main.yml  nightly-release.yml  pr-check.yml
AdminPage/: AdminPage.cpp  AdminPage.h  AdminPage.ui  DashboardPage.cpp  DashboardPage.h  DashboardPage.ui  LoginPage.cpp  LoginPage.h  admin_page.cpp  adminpage.cpp  adminpage.ui  dashboard_page.cpp  dashboardpage.cpp  dashboardpage.h  dashboardpage.ui  login_page.cpp  loginpage.cpp  loginpage.ui
AdminPage/souvenir_adding/: add_souvenir_popup.cpp  add_souvenir_popup.h  addsouvenirpopup.cpp  addsouvenirpopup.h  addsouvenirpopup.ui  newsouvenirpopup.cpp  newsouvenirpopup.h  newsouvenirpopup.ui
AdminPage/stadium_adding/: stadium_adding.cpp  stadium_adding.h  stadium_adding.ui
App/: CMakeLists.txt  application.cpp  application.h
App/data/: Distance between stadiums.csv  MLB Information.csv  csv_error.txt
App/data_access/: _my_unoredred_map.h  csv_utils.h  database_manager.cpp  database_manager.h  distancere_pository.cpp  distancere_pository.h  souvenir_repository.cpp  souvenir_repository.h  stadium_repository.cpp  stadium_repository.h
App/model/: shopping_cart.cpp  shopping_cart.h  trip.cpp  trip.h
App/services/: auth_service.cpp  auth_service.h  trip_planner.cpp  trip_planner.h  trip_planner_cli.cpp
App/utils/: csv_utils.cpp  message_utils.cpp  message_utils.h
assets/: BaseballStadiumGraph.pptx  CS1D Spring 2026 Take me out to the ballgame.docx  DIstance between new team.csv  Distance_between_new_team.csv  MLB_Information_Expansion.csv  Project 2 Reviews Key-1.xlsx
browse_window/: browse_window.cpp  browse_window.h  browse_window.ui
detail_window/: detail_window.cpp  detail_window.h  detail_window.ui
docs/: Agile Stories.docx  Data Structures Used.md  Team rules and coding standards.docx  project 2 CS1D Scrum meetings.docx
docs/doxygen/App/: __my__unoredred__map_8h_source.html  annotated.html  annotated_dup.js  application_8h_source.html  auth__service_8h_source.html  class_application-members.html  class_application.html  class_auth_service-members.html  class_auth_service.html  class_database_manager-members.html  class_database_manager.html  class_distance_repository-members.html  class_distance_repository.html  class_m_t_l___a_1_1_my_unoredred_map-members.html  class_m_t_l___a_1_1_my_unoredred_map.html  class_shopping_cart-members.html  class_shopping_cart.html  class_souvenir_repository-members.html  class_souvenir_repository.html  class_stadium_repository-members.html  class_stadium_repository.html  class_trip-members.html  class_trip.html  class_trip_planner-members.html  class_trip_planner.html  classes.html  csv__utils_8h_source.html  database__manager_8h_source.html  dir_056ec8f0377ddc4293192cbc6b19c99c.html  dir_056ec8f0377ddc4293192cbc6b19c99c.js  dir_19cc55e16c6b4e30b6d17f58c77ae9b4.html  dir_19cc55e16c6b4e30b6d17f58c77ae9b4.js  dir_3f14f6767c31cb4a1d22c13c18cc6fc3.html  dir_3f14f6767c31cb4a1d22c13c18cc6fc3.js  dir_cbdb8362360e11eafe2fa3bc74cf0ffd.html  dir_cbdb8362360e11eafe2fa3bc74cf0ffd.js  distancere__pository_8h_source.html  doxygen_crawl.html  files.html  files_dup.js  (+13 more)
docs/doxygen/App/search/: all_0.js  all_3.js  classes_1.js  classes_2.js  classes_4.js
docs/org/: Big-O Discussion.md
docs/test/: Testing.pptx  Updated Agile Stories.md  test.md
docs/uml/: Application_Class_Diagram.puml
end_trip_summary/: end_trip_summary.cpp  end_trip_summary.h  end_trip_summary.ui
main_page/: main_page.cpp  main_page.h  main_page.ui
trip_detail_page/: trip_detail_page.cpp  trip_detail_page.h  trip_detail_page.ui
trip_planning/cart_page/: cart_page.cpp  cart_page.h
trip_planning/tour_shop_page/: tour_shop_window.cpp  tour_shop_window.h
trip_planning/trip_detail_page/: trip_detail_page.cpp  trip_detail_page.h
